# cosmic

./:  test_allocate.py  README.md  config.py  conftest.py  flask_app.py  model.py  orm.py  pyproject.toml  repository.py  requirements.txt  test_allocate.py  test_batches.py  test_orm.py
adapters/: orm.py  repository.py
domain/: model.py
entrypoints/: flask_app.py
service_layer/: services.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_allocate.py  test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_batches.py  test_services.py
